hpa/4 - Load_generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-load-generator
  namespace: hpa
  labels: 
    app: load-generator
  
spec:
  containers:
  - name: alpine
    image: alpine:3.17
    resources:
      limits:
        memory: 256Mi
        cpu: 0.6
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget http://nginx-hpa-svc:80/hpa/; sleep 0.003; rm index.html; done"]
