hpa/4 - load_generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: nginx-hpa
  labels: 
    app: load-generator
  
spec:
  containers:
  - name: alpine
    image: alpine:3.17
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget http://nginx-svc:80; sleep 0.003;done"]
