hpa/2 - deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-hpa
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      affinity:
          nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                - key: for
                  operator: In
                  values:
                  - webserver      
      containers:
      - name: nginx
        image: nginx:1.23.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 15m

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-hpa
  labels:
    app: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
