hpa/5 - ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hpa-ingress
  namespace: nginx-hpa
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/hpa"
        backend:
          service:
            name: nginx-hpa-svc
            port:
              number: 80
